@startuml
'https://plantuml.com/class-diagram

abstract class AbstractEnemyFactory {
    + {abstract} creatEnemy(int hp):AbstractAircraft
}

class MobFactory {
    + creatEnemy(int hp):AbstractAircraft
}

class EliteFactory {
    - randomDirection():int
    + creatEnemy(int hp):AbstractAircraft
}

class BossFactory {
    - randomDirection():int
    + creatEnemy(int hp):AbstractAircraft
}

abstract class GameTemplate {
}

abstract class AbstractFlyingObject
{
    # locationX:int
    # locationY:int
    # speedX:int
    # speedY:int
    # image:BufferedImage
    # width:int
    # height:int
    # isValid:boolean

    + AbstractFlyingObject(int locationX, int locationY, int speedX, int speedY)
    + forward():void
    + crash(AbstractFlyingObject flyingObject):boolean
    + setLocation(double locationX, double locationY):void
    + getLocationX():int
    + getLocationY():int
    + getSpeedY():int
    + getImage():BufferedImage
    + getWidth():int
    + getHeight():int
    + notValid():boolean
    + vanish():void
}

abstract class AbstractAircraft
{
	# maxHp:int
    # hp:int
    # fireStrategy:FireStrategy
    # direction:int
    + AbstractAircraft(int locationX, int locationY, int speedX, int speedY, int hp)
    + decreaseHp(int decrease):void
    + getHp():int
    + setFireStrategy(FireStrategy fireStrategy):void
    + getFireStrategy():FireStrategy
    + executeStrategy(AbstractAircraft abstractAircraft):List<AbstractBullet>
    + getspeedX():int
}

class MobEnemy {
    + MobEnemy(int locationX, int locationY, int speedX, int speedY, int hp)
    + forward():void
}

class EliteEnemy {
    + EliteEnemy(int locationX, int locationY, int speedX, int speedY, int hp)
    + forward():void
}

class Boss {
    + Boss(int locationX, int locationY, int speedX, int speedY, int hp)
    + forward():void
}

AbstractFlyingObject <|-- AbstractAircraft

AbstractAircraft <|-- MobEnemy
AbstractAircraft <|-- EliteEnemy
AbstractAircraft <|-- Boss

AbstractEnemyFactory <|-- MobFactory
AbstractEnemyFactory <|-- EliteFactory
AbstractEnemyFactory <|-- BossFactory

GameTemplate ..> AbstractEnemyFactory
GameTemplate ..> AbstractAircraft

MobFactory ..> MobEnemy
EliteFactory ..> EliteEnemy
BossFactory ..> Boss

@enduml